# coffee-labeler

./: .gitignore  Cargo.toml  build.rs  flake.nix
nix/: module.nix
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs  render.rs
src/components/: label.rs  label_form.rs  mod.rs
src/pages/: index.rs
